# spark-structured-streaming-kafka

./: .gitignore  .pre-commit-config.yaml  Makefile  README.md  docker-compose.yaml  docker-compose.yml  pyproject.toml  requirements.txt  setup.py
.github/: dependabot.yml
movie_ratings_streaming/: config.ini  entrypoint.py  movie-ratings-avro-schema.json  produce_test_events.py  schema.py  stream.py
movie_ratings_streaming/config/: config.ini  config.py  movie-ratings-avro-schema.avsc
spark_structured_streaming_demo/: entrypoint.py  movie_ratings_stream.py  schema.py
spark_structured_streaming_example/: entrypoint.py  lassy_stream.py  movie_stream.py  schema.py
spark_structured_streaming_example/conf/: config.yml  kafka.aiven.client.staging.keystore.p12  kafka.client.truststore.jks
