[project]
name = "movie-ratings-streaming"
version = "0.2.0"
description = "Spark Structured Streaming data pipeline that processes movie ratings data in real-time"
authors = [{ name = "Guido Kosloff Gancedo", email = "guidokosloff@gmail.com" }]
readme = "README.md"
requires-python = ">=3.13,<3.14"
dependencies = [
    "pyspark~=4.0.0",
]

[dependency-groups]
dev = [
    "ruff~=0.12.7",
    "mypy~=1.17.1",
    "confluent-kafka[avro, schemaregistry]~=2.11.0",
    "requests~=2.32.4",
    "fastavro~=1.12.0",
    "pre-commit~=4.2.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.coverage.run]
branch = true
source = ["movie_ratings_streaming"]

[tool.coverage.report]
show_missing = true

[tool.mypy]
ignore_missing_imports = true
disallow_untyped_calls = true
disallow_untyped_defs = true
disallow_incomplete_defs = true

[tool.ruff]
line-length = 120

[tool.ruff.lint]
select = [
    # pycodestyle
    "E",
    # Pyflakes
    "F",
    # pyupgrade
    "UP",
    # flake8-bugbear
    "B",
    # flake8-simplify
    "SIM",
    # isort
    "I",
]
