[project]
name = "movie-ratings-streaming"
version = "0.3.0"
description = "Spark Structured Streaming data pipeline that processes movie ratings data in real-time"
authors = [{ name = "Guido Kosloff Gancedo", email = "guidokosloff@gmail.com" }]
readme = "README.md"
requires-python = ">=3.13,<3.14"
dependencies = [
    "pyspark~=4.1.0",
]

[dependency-groups]
dev = [
    "ruff~=0.14.10",
    "ty~=0.0.4",
    "confluent-kafka[avro, schemaregistry]~=2.12.2",
    "requests~=2.32.5",
    "fastavro~=1.12.1",
    "pre-commit~=4.5.1",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.coverage.run]
branch = true
source = ["movie_ratings_streaming"]

[tool.coverage.report]
show_missing = true

[tool.ty.rules]
no-matching-overload = "ignore"

[tool.ruff]
line-length = 120

[tool.ruff.lint]
select = [
    # pycodestyle
    "E",
    # Pyflakes
    "F",
    # pyupgrade
    "UP",
    # flake8-bugbear
    "B",
    # flake8-simplify
    "SIM",
    # isort
    "I",
]
