[project]
name = "movie-ratings-streaming"
version = "0.3.1"
description = "Spark Structured Streaming data pipeline that processes movie ratings data in real-time"
authors = [{ name = "Guido Kosloff Gancedo", email = "guidokosloff@gmail.com" }]
readme = "README.md"
requires-python = "~=3.14.0"
dependencies = [
    "pyspark~=4.1.2",
]

[dependency-groups]
dev = [
    "ruff~=0.15.20",
    "ty~=0.0.56",
    "confluent-kafka[avro, schemaregistry]~=2.15.0",
    "requests~=2.34.2",
    "fastavro~=1.12.2",
    "pre-commit~=4.6.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.coverage.run]
branch = true
source = ["movie_ratings_streaming"]

[tool.coverage.report]
show_missing = true

[tool.ty.rules]
no-matching-overload = "ignore"

[tool.ruff]
line-length = 120

[tool.ruff.lint]
select = [
    # pycodestyle
    "E",
    # Pyflakes
    "F",
    # pyupgrade
    "UP",
    # flake8-bugbear
    "B",
    # flake8-simplify
    "SIM",
    # isort
    "I",
]
